# pretrain

./: README.md  pyproject.toml
pretrain/: README.md  convert_pretrained_checkpoint.py  distributed_pretrain.py  merge_files.py  optimize_dataset.py  pretrain.py
pretrain/config_hub/: llama3-8b.yaml
