[tool.poetry]
name = "pretrain"
version = "0.1.0"
description = "Library for pretraining"
authors = ["Apurva Joshi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
litgpt = "^0.4.1"
litdata = "^0.2.12"
jsonargparse = "^4.29.0"
transformers = "^4.44.2"
tokenizers = "^0.19.1"
torch = "2.4.0"
ray = {version = "2.32.0", extras = ["data", "train", "tune", "serve"]}
sentencepiece = "^0.2.0"
pyopenssl = "^24.0.0"
wandb = "^0.17.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
